$Id$

0.7.1beta
	- status command now detecs also zone/server changes
	  (previously only host changes were detected)
	- import-dhcp: support for multiple host entries with same
	  MAC and fixes to MAC address parsing  
	  by Spencer H Visick <visick@eng.utah.edu>
	- update-dhcp-info: now supports also logfiles generated by
	  Solaris syslogd
	- now returns all results when using "Download results in CVS format"
	  option when searching hosts 
	- new configuration option SAURON_HINFO_MODE to set the
	  behaviour of (host) HINFO fields when adding/editing hosts
	  (see config.in for more info)
	- primary and slave zone pathnames can now automatically
	  be "hashed" by the first letter(s) of zone name, by
	  using special tag %N in "Primary zone-file path" and/or
	  "Slave zone-file path" fields in server settings.
	- database format changes (1.2):
	   - settings: renamed column 'key' --> 'setting'
	   - nets: new columnd 'dummy'
	   - servers: new column 'lastrun'
	- new configuration valiablre SAURON_CHR that allows
          limiting what can be used in some host record
	  fields (dept,location,asset_id) by server and by
	  user group
	- VLAN names now can be in mixed-case (before only 
	  lower-case was allowed)
	- support for "DHCP only" entries without IP
	  (just MAC address)
	- sauron.cgi script split into several modules
	  that are loaded only when needed (should make
	  code more manageable and maybe a even slightly faster)
	- added support for Apache (external) authentication
	
0.7.0
	- added new utility import-nets for importing/updating
	  nets (and VLANs) from a CSV file
	- added support for custom DHCP classes
	- removed hosts	show up as "pending" changes to zone
	  (before only new hosts or modified hosts showed up)
	- added new user/group privileges that can be used to 
	  control what type records user can add
	- improved code for detecting wheter zone serial should
	  be increased or not (detects removed hosts and work
	  with reverse zones)